<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageContacts"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="292dp"
        android:contentDescription="@string/contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/contacts" />

    <ImageView
        android:id="@+id/imageCalendrier"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="292dp"
        android:contentDescription="@string/calendrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/imageHistorique"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/trajet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/delivery" />

    <ImageView
        android:id="@+id/imageUrgence"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/urgence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/emergency" />

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="140dp"
        android:layout_height="145dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grandfather" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/alerte"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Code"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/membres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/contacts"
        android:textSize="20sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageContacts"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/trajet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/trajet"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageHistorique"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calendrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/calendrier"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageCalendrier"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/urgence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/urgence"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageUrgence"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>