<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.AddMemberActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastnameTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/picture"
        app:layout_constraintStart_toStartOf="@+id/btnImport"
        app:layout_constraintTop_toBottomOf="@+id/picture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstnameTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/lastnameTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/lastnameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/lastnameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adresseTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/firstnameTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/firstnameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/firstnameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adresse"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:hint="@string/adresse"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telephoneTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/adresseTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/adresseTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/adresseTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telephone"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/telephoneTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/telephoneTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/telephoneTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/btnImport"
        app:layout_constraintStart_toStartOf="@+id/btnImport"
        app:layout_constraintTop_toBottomOf="@+id/btnImport">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nom"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:hint="Image name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/emailTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout" />

    <Button
        android:id="@+id/btnImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="Importer Image"
        app:layout_constraintEnd_toStartOf="@+id/picture"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="53dp" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Image"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnImport"
        app:layout_constraintTop_toTopOf="@+id/btnImport" />

    <TextView
        android:id="@+id/format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="format"
        app:layout_constraintBottom_toTopOf="@+id/picture"
        app:layout_constraintEnd_toEndOf="@+id/picture"
        app:layout_constraintStart_toStartOf="@+id/picture" />

</androidx.constraintlayout.widget.ConstraintLayout>